Bug 453979 - UI elements in the Behavior tab of the Configuration are too wide
Summary: UI elements in the Behavior tab of the Configuration are too wide
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: application (other bugs)
Version First Reported In: 22.04.0
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-05-18 11:49 UTC by Mehrad Mahmoudian
Modified: 2022-05-18 15:45 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
A short video to demo the issue (327.31 KB, video/mp4)
2022-05-18 11:49 UTC, Mehrad Mahmoudian
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mehrad Mahmoudian 2022-05-18 11:49:13 UTC
Created attachment 148943 [details]
A short video to demo the issue

SUMMARY

The UI elements in the Behavior tab of the Configuration are static and too wide. This is not the case in any other setting that I have looked into. I have attached a very short video to demo the issue.


STEPS TO REPRODUCE
1. From the menu navigate to: Settings > Configure Kate...
2. Navigate to the Behavior tab from the left sidebar
3. Observe the length of the UI elements
4. Most probably you also have scrollbars due to the long elements in that part of the UI

OBSERVED RESULT

There is a scrollbar at the bottom of the section, the elements are overflowing the visible UI despite the fact that there is enough space and there is no need to be that long. For instance none of the elements in the drop-down box are longer than 7 characters, and yet the box is 358 pixels long according to kruler.

EXPECTED RESULT

The UI element and text respect the window size and don't overflow if there is no need to.

SOFTWARE/OS VERSIONS
Operating System: Manjaro Linux
KDE Plasma Version: 5.24.5
KDE Frameworks Version: 5.93.0
Qt Version: 5.15.3
Kernel Version: 5.15.38-1-MANJARO (64-bit)
Graphics Platform: X11
Processors: 8 × Intel® Core™ i7-4770K CPU @ 3.50GHz
Memory: 15.5 GiB of RAM
Graphics Processor: NVIDIA GeForce GTX 1060 6GB/PCIe/SSE2
Kate Version: 22.04.0

ADDITIONAL INFORMATION
Comment 1 Waqar Ahmed 2022-05-18 15:45:28 UTC
Git commit 43b2e55fb1b7925b974202dc9159330982f0385b by Waqar Ahmed.
Committed on 18/05/2022 at 15:44.
Pushed by waqar into branch 'master'.

Word wrap label in behaviour settings

M  +4    -2    apps/lib/kateconfigdialog.cpp

https://invent.kde.org/utilities/kate/commit/43b2e55fb1b7925b974202dc9159330982f0385b