Word wrap label in behaviour settings

BUG: 453979